// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@foo-software/lighthouse-persist should match snapshot 1`] = `[Function]`;

exports[`@foo-software/lighthouse-persist should return an expected response payload 1`] = `
{
  "finalScreenshot": undefined,
  "loadingExperience": undefined,
  "localReport": undefined,
  "originLoadingExperience": undefined,
  "report": "https://s3.amazonaws.com/foo-software-html/lighthouse-report-example.html",
  "result": {
    "categories": {
      "performance": {},
    },
    "mock": true,
  },
}
`;

exports[`@foo-software/lighthouse-persist should return an expected response payload when "psiKey" is provided 1`] = `
{
  "finalScreenshot": undefined,
  "loadingExperience": {
    "mock": true,
  },
  "localReport": undefined,
  "originLoadingExperience": {
    "mock": true,
  },
  "report": "https://s3.amazonaws.com/foo-software-html/lighthouse-report-example.html",
  "result": {
    "mock": true,
  },
}
`;
